fixed bottom spacing

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header {
 
 .spacer {
   height: 13px;
-  background: #000;
+  background: #ccc;
 }
 
 /*main starts here!*/
@@ -143,7 +143,7 @@ height: 300px;
 .spacer2 {
   margin-top: 40px;
   height: 13px;
-  background: #000;
+  background: #ccc;
 }
 
 footer {
@@ -197,6 +197,6 @@ button {
   text-align: center;
 }
 
-#sub-foot{
-  margin-bottom: -15px;
+#sub-foot p{
+  margin-bottom: -5px;
 }
